# cpp

./: .gitignore  README.md  boostmpi.cpp  test.pl
B64/: Base64.cpp  Base64.h  CMakeLists.txt  main.cpp
RTree/: CMakeLists.txt  Vec2D.cpp  Vec2D.h  main.cpp
RTreeProto/: CMakeLists.txt  Point.hpp  RTree.cpp  Rect.hpp  main.cpp
RTreeProto/protoindexstring/: CMakeLists.txt  pis.pl  protoindexstring.cpp
RangeMap/: CMakeLists.txt  CRect.cpp  CRect.h  Point.cpp  Point.h  Transform.cpp  Transform.h  main.cpp  test.pl
Threadpool/: CMakeLists.txt  Threadpool.cpp  Threadpool.h  main.cpp
TimeMeasure/: CMakeLists.txt  TimeMeasure.cpp  main.cpp
apfel/: .depend  Image.h  Makefile  PicData.cpp  PicData.h  apfel.cpp  apfel.tmproj  tool
cliontest/: CLionTestApp.cpp  CLionTestApp.h  CLionTestFrame.cpp  CLionTestFrame.h  CMakeLists.txt  Endianness.cpp  Endianness.h  Histogram.h  Mandelbrot.cpp  Mandelbrot.h  Planet.cpp  Planet.h  PlanetGenerator.cpp  PlanetGenerator.h  Properties.cpp  Properties.h  Range2D.h  TimeMeasure.cpp  TimeMeasure.h  Universe.cpp  Universe.h  Vector.cpp  Vector.h  main.cpp
cpp11/: Arbeitsmappe1.csv  B64.cpp  TestB64  Testcsv  Testkdtree  Testmem  cpp11.cpp  cpp11chrono.cpp  cpp11etl.cpp  csv  csv.cpp  kdtree.cpp  mem.cpp  rvs.txt  searchvectors.txt  ttt.cpp  vectors.txt
cpp11/TestB64.dSYM/Contents/: Info.plist
cpp11/TestB64.dSYM/Contents/Resources/DWARF/: TestB64
cpp11/Testkdtree.dSYM/Contents/: Info.plist
cpp11/Testkdtree.dSYM/Contents/Resources/DWARF/: Testkdtree
cpp11/Testmem.dSYM/Contents/: Info.plist
cpp11/Testmem.dSYM/Contents/Resources/DWARF/: Testmem
cpp14/: .depend  Testexp  Testit  Testtp  Testvariant  ThreadPool.h  apfel2.cpp  base64.cpp  boost  boost.cpp  build.pl  date  date.cpp  duplicate  duplicate.cpp  duplicate.cpp.bak  excepttest.cpp  exp  exp.cpp  imbue.cpp  it.cpp  it.txt  makefile  mandel  mandel.cpp  mempooltest.cpp  mmfile.cpp  parallel.cpp  png.cpp  raii.cpp  readfile.cpp  rtree  rtree.cpp  rtree_defs.txt  sint.cpp  textgcc  textgcc.cpp  thr.cpp  tp.cpp  variant.cpp
cpp14/SubArray/: Testsumup  numbers.txt  sumup.cpp
cpp14/SubArray/Testsumup.dSYM/Contents/: Info.plist
cpp14/SubArray/Testsumup.dSYM/Contents/Resources/DWARF/: Testsumup
cpp14/Testit.dSYM/Contents/: Info.plist
cpp14/Testit.dSYM/Contents/Resources/DWARF/: Testit
cpp14/Testvariant.dSYM/Contents/: Info.plist
cpp14/Testvariant.dSYM/Contents/Resources/DWARF/: Testvariant
cpp14/join/: join  join.cpp  join.cpp.bak
cpp14/mandel2/: mandel2  mandel2.cpp
ctree/Project1/: avltree.c
duplicates/: CMakeLists.txt  ResTempl1.rct  duplicates.cpp  duplicates.h  resource.h  test.cpp
duplicates/dependencies/: xxhash.hpp
duplicates/test - Kopie/: bla3.txt
experiments/: CMakeLists.txt  areagrid.cpp  b64lookup.cpp  btree.cpp  deleter.cpp  gamma.cpp  hashfunction.cpp  hashjoin.cpp  iban.cpp  indexfile.cpp  kdrandom.h  kdtree.cpp  kdtree.h  kdtree2.cpp  kdtree_test.cpp  literal.cpp  mmap.cpp  ndimarray.cpp  placement.cpp  printbits.cpp  raw.cpp  roman.cpp  rtree.cpp  sdltest.cpp  timemeasure.h  variadictemplates.cpp  zhang.cpp  zhang.cpp.bak
generator/: Testasync  Testcharset  Testdft  Testgenerator  Testrvo  async.cpp  charset.cpp  dft.cpp  generator.cpp  generator.tmproj  rvo.cpp
generator/Testgenerator.dSYM/Contents/: Info.plist
generator/data/: mvornamen.txt  wvornamen.txt
html/: simulation.html
kmeans/: CMakeLists.txt  draw.cpp  draw.h  example.c  group.h  main.cpp  options.cpp  options.h  point.cpp  point.h  timer.cpp  timer.h
mandel/: WinTime.cpp  getstats.pl  mandel.cpp  mandel.pl  mandel.py  mpl.txt  mpy.txt  stats.txt  statse.txt
maze2/: CMakeLists.txt  MazeBitmapPainter.cpp  MazeBitmapPainter.h  main.cpp  maze.bat  maze.cpp  maze.h  mymaze.txt
sdl2mactest/: CMakeLists.txt  main.cpp  vector2d.h
unicode/: CMakeLists.txt  unicode.cpp
year3017/: main.cpp
